name:                ether
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ether#readme
license:             BSD3
license-file:        LICENSE
author:              Jon Cheng and Dan Choi
maintainer:          example@example.com
copyright:           2016 Jon Cheng and Dan choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ether
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , digestive-functors
                     , digestive-functors-lucid
                     , scotty
                     , containers
                     , websockets
                     , aeson
                     , wai-extra
                     , scotty
                     , warp
                     , wai
                     , http-types
                     , blaze-builder
                     , transformers
                     , time
                     , conduit
                     , conduit-extra
                     , async
                     , postgresql-simple
                     , lucid
  ghc-options: -threaded

--executable ethertest
--  hs-source-dirs:      .
--  main-is:             exp.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--                     , text
--                     , bytestring
--                     , containers
--                     , conduit
--                     , conduit-extra
--
--executable ethertest2
--  hs-source-dirs:      .
--  main-is:             exp2.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--                     , text
--                     , bytestring
--                     , containers
--                     , conduit
--                     , conduit-extra
--                     , wai
--                     , transformers
--                     , warp
--                     , async
--                     , scotty
--  ghc-options: -threaded
