name:                session
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/session#readme
license:             BSD3
license-file:        LICENSE
author:              Jon Cheng and Dan Choi
maintainer:          example@example.com
copyright:           2016 Jon Cheng and Dan choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sess
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , clientsession

executable desess
  hs-source-dirs: .
  main-is: Main2.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && < 5, text, bytestring, clientsession


