name:                posttest
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/danchoi/posttest
license:             MIT
license-file:        LICENSE
author:              Dan Choi
maintainer:          example@example.com
copyright:           2016 Dan Choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable posttest
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , scotty
                     , warp
                     , transformers
